src/pyautoeios/eios.py


        bool Reflect_Bool(
            EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        return self._stdcall.Reflect_Bool(
            self._eios_ptr, jobject, hook.cls, hook.field, hook.desc
        )

    _stdcall.Reflect_Char.restype = ctypes.c_char
    _stdcall.Reflect_Char.argtypes = [
        EIOSPtr,
        JObject,
        cstr,
        cstr,
        cstr,
    ]

    def _Reflect_Char(self, jobject: JObject, hook: THook) -> bytes:
        """Wrap Reflect_Char.

        char Reflect_Char(
            EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        return self._stdcall.Reflect_Char(
            self._eios_ptr, jobject, hook.cls, hook.field, hook.desc
        )

    _stdcall.Reflect_Byte.restype = ctypes.c_int8
    _stdcall.Reflect_Byte.argtypes = [
        EIOSPtr,
        JObject,
        cstr,
        cstr,
        cstr,
    ]

    def _Reflect_Byte(self, jobject: JObject, hook: THook) -> int:
        """Wrap Reflect_Byte.

        std::uint8_t Reflect_Byte(
            EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        value = self._stdcall.Reflect_Byte(
            self._eios_ptr, jobject, hook.cls, hook.field, hook.desc
        )
        return ((value * hook.multiplier) + 2 ** 7) % 2 ** 8 - 2 ** 7

    _stdcall.Reflect_Short.restype = ctypes.c_int16
    _stdcall.Reflect_Short.argtypes = [
        EIOSPtr,
        JObject,
        cstr,
        cstr,
        cstr,
    ]

    def _Reflect_Short(self, jobject: JObject, hook: THook) -> int:
        """Wrap Reflect_Short.

        std::int16_t Reflect_Short(
            EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        value = self._stdcall.Reflect_Short(
            self._eios_ptr, jobject, hook.cls, hook.field, hook.desc
        )
        return ((value * hook.multiplier) + 2 ** 15) % 2 ** 16 - 2 ** 15

    _stdcall.Reflect_Int.restype = ctypes.c_int32
    _stdcall.Reflect_Int.argtypes = [
        EIOSPtr,
        JObject,
        cstr,
        cstr,
        cstr,
    ]

    def _Reflect_Int(self, jobject: JObject, hook: THook) -> int:
        """Wrap Reflect_Int.

        std::int32_t Reflect_Int(
            EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        value = self._stdcall.Reflect_Int(
            self._eios_ptr, jobject, hook.cls, hook.field, hook.desc
        )
        return ((value * hook.multiplier) + 2 ** 31) % 2 ** 32 - 2 ** 31

    _stdcall.Reflect_Long.restype = ctypes.c_int64
    _stdcall.Reflect_Long.argtypes = [
        EIOSPtr,
        JObject,
        cstr,
        cstr,
        cstr,
    ]

    def _Reflect_Long(self, jobject: JObject, hook: THook) -> int:
        """Wrap Reflect_Long.

        std::int64_t Reflect_Long(
            EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        value = self._stdcall.Reflect_Long(
            self._eios_ptr, jobject, hook.cls, hook.field, hook.desc
        )
        return ((value * hook.multiplier) + 2 ** 63) % 2 ** 64 - 2 ** 63

    def _Reflect_Float(self, jobject: JObject, hook: THook) -> float:
        """Wrap Reflect_Float.

        float Reflect_Float(
            EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        raise NotImplementedError

    def _Reflect_Double(self, jobject: JObject, hook: THook) -> float:
        """Wrap Reflect_Double.

        double Reflect_Double(
            EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        raise NotImplementedError

    _stdcall.Reflect_String.restype = None
    _stdcall.Reflect_String.argtypes = [
        EIOSPtr,
        JObject,
        cstr,
        cstr,
        cstr,
        cstr,
        ctypes.c_size_t,
    ]

    def _Reflect_String(self, jobject: JObject, hook: THook, max_size=100):
        """Wrap Reflect_String.

        void Reflect_String(EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc,
            char* output,
            std::size_t output_size
        ) noexcept;
        """
        output = ctypes.create_string_buffer(max_size)
        self._stdcall.Reflect_String(
            self._eios_ptr, jobject, hook.cls, hook.field, hook.desc, output, max_size
        )
        return output.value.decode("utf8")

    _stdcall.Reflect_Array.restype = JObject
    _stdcall.Reflect_Array.argtypes = [
        EIOSPtr,
        JObject,
        cstr,
        cstr,
        cstr,
    ]

    def _Reflect_Array(self, jobject: JObject, hook: THook):
        """Wrap Reflect_Array.

        jarray Reflect_Array(EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        return self._stdcall.Reflect_Array(
            self._eios_ptr, jobject, hook.cls, hook.field, hook.desc
        )

    _stdcall.Reflect_Array_With_Size.restype = JObject
    _stdcall.Reflect_Array_With_Size.argtypes = [
        EIOSPtr,
        JObject,
        IntPtr,
        cstr,
        cstr,
        cstr,
    ]

    def _Reflect_Array_With_Size(self, jobject: JObject, hook: THook):
        """Wrap Reflect_Array_With_Size.

        jarray Reflect_Array_With_Size(
            EIOS* eios,
            jobject object,
            std::size_t* output_size,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        size = ctypes.c_int32()
        _ref = self._stdcall.Reflect_Array_With_Size(
            self._eios_ptr, jobject, ctypes.byref(size), hook.cls, hook.field, hook.desc
        )
        return (_ref, size.value)

    _stdcall.Reflect_Array_Size.argtypes = [EIOSPtr, JArray]
    _stdcall.Reflect_Array_Size.restype = ctypes.c_size_t

    def _Reflect_Array_Size(self, jarray: JArray):
        """Wrap Reflect_Array_Size.

        std::size_t Reflect_Array_Size(
            EIOS* eios,
            jarray array
        ) noexcept;
        """
        return self._stdcall.Reflect_Array_Size(self._eios_ptr, jarray)

    _stdcall.Reflect_Array_Index.restype = ctypes.c_void_p
    _stdcall.Reflect_Array_Index.argtypes = [
        EIOSPtr,
        JArray,
        ctypes.c_uint,
        ctypes.c_size_t,
        ctypes.c_size_t,
    ]

    def _Reflect_Array_Index(
        self,
        jarray: JArray,
        data_type: int,
        index: int,
        length: int,
    ):
        """Wrap Reflect_Array_Index.

        void* Reflect_Array_Index(
            EIOS* eios,
            jarray array,
            ReflectionArrayType type,
            std::size_t index,
            std::size_t length
        ) noexcept;
        """
        return self._stdcall.Reflect_Array_Index(
            self._eios_ptr, jarray, data_type, index, length
        )

    _stdcall.Reflect_Array_Index2D.restype = ctypes.c_void_p
    _stdcall.Reflect_Array_Index2D.argtypes = [
        EIOSPtr,
        JArray,
        ctypes.c_uint,
        ctypes.c_size_t,
        ctypes.c_size_t,
        ctypes.c_size_t,
    ]

    def _Reflect_Array_Index2D(
        self,
        jarray: JArray,
        data_type: int,
        length: int,
        x: int,
        y: int,
    ):
        """Wrap Reflect_Array_Index2D.

        void* Reflect_Array_Index2D(
            EIOS* eios,
            jarray array,
            ReflectionArrayType type,
            std::size_t length,
            std::int32_t x,
            std::int32_t y
        ) noexcept;
        """
        return self._stdcall.Reflect_Array_Index2D(
            self._eios_ptr, jarray, data_type, length, x, y
        )

    _stdcall.Reflect_Array_Index3D.restype = ctypes.c_void_p
    _stdcall.Reflect_Array_Index3D.argtypes = [
        EIOSPtr,
        JArray,
        ctypes.c_uint,
        ctypes.c_size_t,
        ctypes.c_size_t,
        ctypes.c_size_t,
        ctypes.c_size_t,
    ]

    def _Reflect_Array_Index3D(
        self,
        jarray: JArray,
        data_type: int,
        length: int,
        x: int,
        y: int,
        z: int,
    ):
        """Wrap Reflect_Array_Index3D.

        void* Reflect_Array_Index3D(
            EIOS* eios,
            jarray array,
            ReflectionArrayType type,
            std::size_t length,
            std::int32_t x,
            std::int32_t y,
            std::int32_t z
        ) noexcept;
        """
        return self._stdcall.Reflect_Array_Index3D(
            self._eios_ptr, jarray, data_type, length, x, y, z
        )

    _stdcall.Reflect_Array_Index4D.restype = ctypes.c_void_p
    _stdcall.Reflect_Array_Index4D.argtypes = [
        EIOSPtr,
        JArray,
        ctypes.c_uint,
        ctypes.c_size_t,
        ctypes.c_size_t,
        ctypes.c_size_t,
        ctypes.c_size_t,
        ctypes.c_size_t,
    ]

    def _Reflect_Array_Index4D(
        self,
        jarray: JArray,
        data_type: int,
        length: int,
        x: int,
        y: int,
        z: int,
        w: int,
    ):
        """Wrap Reflect_Array_Index4D.

        void* Reflect_Array_Index4D(
            EIOS* eios,
            jarray array,
            ReflectionArrayType type,
            std::size_t length,
            std::int32_t x,
            std::int32_t y,
            std::int32_t z,
            std::int32_t w
        ) noexcept;
        """
        return self._stdcall.Reflect_Array_Index4D(
            self._eios_ptr, jarray, data_type, length, x, y, z, w
        )

    _stdcall.Reflect_Array_Indices.restype = ctypes.c_void_p
    _stdcall.Reflect_Array_Indices.argtypes = [
        EIOSPtr,
        JArray,
        ctypes.c_uint,
        IntPtr,
        ctypes.c_size_t,
    ]

    def _Reflect_Array_Indices(
        self,
        jarray: JArray,
        data_type: int,
        indices: List[int],
    ):
        """Wrap Reflect_Array_Indices.

        void* Reflect_Array_Indices(
            EIOS* eios, jarray array, ReflectionArrayType type, std::int32_t* indices, std::size_t length
        ) noexcept;
        """
        c_array_type = ctypes.c_int * len(indices)
        c_array = c_array_type(*indices)
        return self._stdcall.Reflect_Array_Indices(
            self._eios_ptr, jarray, data_type, c_array, len(indices)
        )
